<resources>
    <string name="app_name">KotlinDetailsList</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="length_of_trail">Length of trail</string>
    <string name="name_of_trail">Name of trail</string>
    <string name="difficulty">Difficulty</string>
    <string name="estimated_duration">Estimated duration</string>
    <string name="description">Description</string>
    <string name="wybierz_sw_j_szlak">Wybierz swój szlak</string>
    <string name="start">Start</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="stop">Stop</string>
    <string name="settings" />
    <string name="done" />
    <string name="sendSms" >Send SMS from trial</string>
    <string name="menu_title">Menu</string>
    <string name="opisStronyGlownej">To aplikacja do przeglądania górskich szlaków turystycznych</string>
</resources>