<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/timerContainer"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/toolbar" />

            <View
                android:id="@+id/line1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/nameOfTrail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of_trail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/lengthOfTrail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length_of_trail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/difficultyOfTrail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <View
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/estimatedDurationOfTrail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimated_duration"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <View
                android:id="@+id/line6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/descriptionOfTrail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/sendSmsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@android:dimen/app_icon_size"
                android:text="@string/sendSms"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabSendGreetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toTopOf="@id/timerContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <FrameLayout
        android:id="@+id/timerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nestedScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>
